<resources>
    <string name="app_name">商品部品サンプル</string>
    <string name="tv_msg">お名前を入力してください。</string>
    <string name="bt_save">保存</string>
    <string name="cb_drink">ドリンク</string>
    <string name="cb_food">フード</string>
    <string name="rb_male">男</string>
    <string name="rb_female">女</string>
    <string-array name="sp_currylist">
        <item>ドライカレー</item>
        <item>カツカレー</item>
        <item>ビーフカレー</item>
        <item>チキンカレー</item>
        <item>シーフードカレー</item>
        <item>キーマカレー</item>
        <item>グリーンカレー</item>
    </string-array>
    <string-array name="lv_cocktaillist">
        <item>ホワイトレディ</item>
        <item>バラライカ</item>
        <item>XYZ</item>
        <item>ニューヨーク</item>
        <item>マンハッタン</item>
        <item>ミシシッピミュール</item>
        <item>ブルーハワイ</item>
    </string-array>
</resources>
